# mutter

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMANDS-REFACTOR-PLAN.md  DESIGN_SYSTEM.md  EMBEDDING-INTEGRATION.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LEAN-REFACTOR-PLAN.md  LICENSE  MIGRATION_GUIDE.md  MUTTER-ARCHITECTURE-MAP.md  QUICK_START.md  README.md  REPLICATION_PATTERN.md  SUPERTAG-REMOVAL-PLAN.md  USAGE_EXAMPLES.md  download-model.sh  font.css  index.html  package.json  plan.md  pnpm-lock.yaml  prd.md  repomix-output.xml  test-wasm-embeddings.html  test-webgpu.html  tsconfig.json  vite.config.ts  vitest.config.ts
.agent-tracker/: CURRENT_CONTEXT.md  project-status.json
.forgejo/workflows/: release.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
.serena/: project.yml
coverage/: coverage-final.json  index.html
coverage/crdt/: index.html  vaultMetadataDoc.ts.html
coverage/hooks/: index.html  useQueryEngine.ts.html  useUserProfile.ts.html
coverage/query/: executor.ts.html  index.html  parser.ts.html  splitExecutor.ts.html
coverage/services/: index.html  llm-service.ts.html  text-cleanup-prompts.ts.html  text-cleanup-service.ts.html
coverage/types/: index.html  userProfile.ts.html  voiceCommand.ts.html
coverage/voice/: commandRegistry.ts.html  commandScorer.ts.html  index.html
demo-assets/videos/: demo-editing.webm  demo-voice.webm
docs/: CONFIG_DESIGN.md  CRDT-CONVENTIONS.md  CRDT-SPLITTING-PLAN.md  IMPLEMENTATION-ROADMAP.md  SPLIT_FORMAT_REFACTORING_PLAN.md  USER-GUIDE.md  VAULT-METADATA-CRDT.md  WEEK1-TECHNICAL-SPEC.md  WEEK2-TECHNICAL-SPEC.md  WEEK3-TECHNICAL-SPEC.md  WEEK4-TECHNICAL-SPEC.md  WEEK5-TECHNICAL-SPEC.md  hybrid-data-model-automerge-sync.md  stream-mode-ollama-research.md  voice-interface.md  voice-mode-editor-context.md
src/: App.tsx  AppWithConfig.tsx  events.ts  main.tsx  test-webgpu-embeddings.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: embedding-server-x86_64-unknown-linux-gnu  embedding-server.py  sync-server-x86_64-unknown-linux-gnu  sync-server.mjs
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  config.rs  device.rs  file_watcher.rs  lib.rs  ml.rs  registry.rs  sync_server.rs  system.rs  vault.rs  vault_crdt_fs.rs  vault_state.rs
src-tauri/src/commands/: app.rs  mod.rs  models.rs  notes.rs  transcription.rs
src/__tests__/: setup.ts
src/components/: AIQueryPanel.tsx  AmbiguityPopover.css  AmbiguityPopover.tsx  AudioControl.css  AudioControl.tsx  BacklinksPanel.tsx  ContextMenu.tsx  CrdtSpike.tsx  Editor.css  Editor.tsx  ErrorBoundary.tsx  FileTree.tsx  HelpPanel.tsx  ImageViewer.tsx  LEDMatrix.tsx  LEDMatrixCanvas2D.tsx  ModelManager.css  ModelManager.tsx  Omnibox.tsx  OutlinePanel.tsx  QueryPanel.tsx  QuickCapture.tsx  RightPanel.tsx  SearchPanel.tsx  Sidebar.css  Sidebar.tsx  SimpleModelDialog.css  SimpleModelDialog.tsx  StatusBar.tsx  StreamingTranscription.css  StreamingTranscription.tsx  SyncStatus.tsx  TabBar.tsx  TaskPanel.tsx  ThemeProvider.tsx  VoiceIndicator.tsx  VoiceLogSidebar.css  VoiceLogSidebar.tsx  VoiceSuggestions.tsx  WaveformVisualization.tsx  (+4 more)
src/context/: EditorContextProvider.tsx  VaultMetadataContext.tsx
src/crdt/: base64.ts  graphCacheDoc.ts  manifestDoc.ts  migration.ts  noteDoc.ts  noteDocManager.ts  repo.ts  syncAdapter.ts  vaultFsSnapshotSync.ts  (+3 more)
(+127 files in other folders)
