[package]
name = "mutter"
version = "0.3.0"
description = "Voice-first markdown editor with semantic commands"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tauri = { version = "2.9.4", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
byteorder = "1.5.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-window-state = "2"
walkdir = "2.5.0"
active-win-pos-rs = "0.9.1"

# Audio processing
hound = "3.5"
ringbuf = "0.3"

# Whisper speech-to-text via whisper.cpp (with CUDA GPU acceleration)
whisper-rs = { version = "0.14", features = ["cuda"] }

# File system watcher
notify = "6.1"
notify-debouncer-full = "0.3"

# Utilities
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
rand = "0.8"
dirs = "5.0"

# WebView dependencies for Linux
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
gtk = "0.18"

# Optimize dependencies even in debug mode for ML performance
[profile.dev.package."*"]
opt-level = 3
